--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "consola": "^2.15.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
     "esm": "^3.2.25",
+    "express": "^4.17.1",
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mongoose": "^5.11.13",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
